<resources>
    <string name="app_name">Chatto</string>
    <string name="created_by">Created by Ordinary Potato</string>
    <string name="copyright">Copyright © 2020 James Christian Wira</string>
    <string name="cd_app_logo">App Logo</string>
    <string name="menu_about_app">About App</string>
    <string name="menu_exit">Exit</string>
    <string name="menu_logout">Logout</string>
    <string name="edt_password_hint">Password</string>
    <string name="btn_submit">Submit</string>
    <string name="tv_help_main">Umm.. what is this?</string>
    <string name="tv_password_label_main">Enter password given</string>
    <string name="tv_username_label_main">Create your own username</string>
    <string name="cd_lock_logo">Lock logo</string>
    <string name="edt_username_hint">Username</string>
    <string name="tv_name_label_main">Name</string>
    <string name="edt_name_hint">Fullname</string>
    <string name="menu_add_friend">Add Friend</string>
    <string name="btn_search">Search</string>
    <string name="tv_find_username">Find Username</string>
    <string name="btn_add_friend">Add Friend</string>
</resources>