<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <item android:id="@+id/menuAboutApp"
        android:title="@string/menu_about_app"
        android:icon="@drawable/ic_round_help_24"
        />

    <item android:id="@+id/menuAddFriend"
        android:icon="@drawable/ic_baseline_person_add_24"
        app:showAsAction="ifRoom"
        android:title="@string/menu_add_friend" />

    <item android:id="@+id/menuLogout"
        android:title="@string/menu_logout"
        app:showAsAction="ifRoom"
        android:icon="@drawable/ic_baseline_logout_24"
        />

    <item android:id="@+id/menuExit"
        android:title="@string/menu_exit"
        android:icon="@drawable/ic_round_help_24"
        />
</menu>