<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activities.MainActivity">

    <ImageView
        android:id="@+id/imgLockLogo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/ic_round_lock_56"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toTopOf="@id/llCredentials"
        android:contentDescription="@string/cd_lock_logo" />

    <LinearLayout
        android:id="@+id/llCredentials"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_marginBottom="16dp"
        app:layout_constraintTop_toBottomOf="@id/imgLockLogo"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        >

        <TextView
            android:id="@+id/tvNameLabel"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/tv_name_label_main"
            android:textColor="@color/colorPrimary"
            android:textSize="18sp"
            android:layout_marginHorizontal="8dp"
            android:visibility="gone"
            />

        <EditText
            android:id="@+id/edtName"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textPersonName"
            android:layout_marginHorizontal="8dp"
            android:hint="@string/edt_name_hint"
            android:autofillHints=""
            android:visibility="gone"/>

        <TextView
            android:id="@+id/tvUsernameLabel"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/tv_username_label_main"
            android:textColor="@color/colorPrimary"
            android:textSize="18sp"
            android:layout_marginTop="8dp"
            android:layout_marginHorizontal="8dp"
            />

        <EditText
            android:id="@+id/edtUsername"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="text"
            android:layout_marginHorizontal="8dp"
            android:hint="@string/edt_username_hint"
            android:autofillHints="" />

        <TextView
            android:id="@+id/tvPasswordLabel"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/tv_password_label_main"
            android:textColor="@color/colorPrimary"
            android:textSize="18sp"
            android:layout_marginTop="8dp"
            android:layout_marginHorizontal="8dp"/>

        <EditText
            android:id="@+id/edtPassword"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textPassword"
            android:layout_marginHorizontal="8dp"
            android:hint="@string/edt_password_hint"
            android:autofillHints="" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_margin="8dp"
            >
            <TextView
                android:id="@+id/tvWhyPassword"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:text="@string/tv_help_main"
                android:textColor="@color/colorPrimary"
                android:textSize="12sp"
                android:layout_gravity="center"
                android:layout_weight="1"
                />

            <Button
                android:id="@+id/btnSubmit"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/btn_submit"
                android:textColor="@android:color/white"
                android:backgroundTint="@color/colorPrimary"
                />
        </LinearLayout>
    </LinearLayout>





</androidx.constraintlayout.widget.ConstraintLayout>